[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerMesh.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=2]
radius = 0.5

[sub_resource type="Environment" id=5]
ambient_light_color = Color( 0.105882, 0.105882, 0.105882, 1 )
ambient_light_energy = 4.17
fog_sun_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[node name="Player" type="KinematicBody" groups=["player"]]
collision_mask = 12
script = ExtResource( 1 )
speed = 5

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )

[node name="CameraPivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
environment = SubResource( 5 )

[node name="Pivot" type="Spatial" parent="."]

[node name="PlayerMesh" parent="Pivot" instance=ExtResource( 2 )]

[connection signal="movement_stopped" from="." to="Pivot/PlayerMesh" method="_on_Player_movement_stopped"]
[connection signal="player_backward" from="." to="Pivot/PlayerMesh" method="_on_Player_player_backward"]
[connection signal="player_forward" from="." to="Pivot/PlayerMesh" method="_on_Player_player_forward"]
[connection signal="strafe_left" from="." to="Pivot/PlayerMesh" method="_on_Player_strafe_left"]
[connection signal="strafe_right" from="." to="Pivot/PlayerMesh" method="_on_Player_strafe_right"]
